Working on part two of the preliminaries. Ironed out the RBF-PS differences...making sure its clearly integrated

--- a/latex/macros/aliases.tex
+++ b/latex/macros/aliases.tex
@@ -5,6 +5,7 @@
 \newcommand{\vu}{\mathbf{u}}
 \newcommand{\vx}{\mathbf{x}}
 \newcommand{\vw}{\mathbf{w}}
+\newcommand{\vc}{\mathbf{c}}
 \newcommand{\vy}{\mathbf{y}}
 \newcommand{\vz}{\mathbf{z}}
 \newcommand{\D}{\mathbf{D}}
